ChangeLog
---------

Version 2022.01.00-a5 - ??-???-2022:
  - Changed RUN file$ so that it is not necessary for file$ to have a ".bas"
    extension.
        - if file$ does not exist then will try appending the extensions
          ".bas", ".BAS" and ".Bas" in turn.
  - Fixed bug where relative #INCLUDE files could not be found when running
    a symbolic link to an MMBasic file; the path to the #INCLUDE files was
    incorrectly being resolved relative to the parent of the symbolic link
    instead of the parent of the target file.

Version 2022.01.00-a4 - 15-May-2022:
  - MMB4L is now open-source and licensed under a modified 4-clause BSD license
    similar to that for the PicoMite firmware and MMBasic for Windows. See the
    LICENSE file for details. My thanks to Geoff and Peter for allowing this to
    be possible.
  - Added * command which may be used at the MMBasic prompt (but not within
    programs) as a short-cut for RUN, e.g.
        *foo --bar "wombat"
    is translated to:
        RUN "foo", --bar "wombat"
  - Added ! command which may be used at the MMBasic prompt (but not within
    programs) as a short-cut for SYSTEM, e.g.
        !cp foo bar
    is translated to:
        SYSTEM "cp foo bar"
    An exception is !cd, e.g.
        !cd foo
    is translated to:
        CHDIR "foo"
    This is required because "!cd foo" would otherwise appear to do nothing
    due to the fact that each SYSTEM command is run in the context of a separate
    forked process instead of the MMBasic process itself.
  - Added SYSTEM sub-commands for getting and setting environment variables:
        - SYSTEM GETENV name$, {value$ | value%()}
        - SYSTEM SETENV name$, {value$ | value%()}
    This supplements MM.INFO$(ENVVAR) because it allows values > 255 characters
    to be read into a LONGSTRING.
  - Added option persistence to file "~/.mmbasic/mmbasic.options" for all
    options except for BASE, BREAK, CASE, CODEPAGE, CONSOLE, EXPLICIT and
    RESOLUTION: